fix mini-risk animation / fix extia-animation on mobile devices / fix intro and intro picto

--- a/web/assets/scss/sections/home.scss
+++ b/web/assets/scss/sections/home.scss
@@ -1,5 +1,9 @@
 /*HOME*/
 
+.intro > .row {
+	position:relative;
+}
+
 .intro{
 
 	position: relative;
@@ -43,10 +47,13 @@
 	.intro-picto{
 		@extend .show-for-medium-up;
 		position: relative;
+		height:100%;
+		position:absolute;
+		left:0;
+
 
 
 		@media#{$medium-up}{
-			height:rem-calc(350);
 
 			&:after{
 				position: absolute;
@@ -60,9 +67,6 @@
 			}
 		}
 
-		@media #{$xlarge-up} { 
-			height:rem-calc(430);
-		}
 	}
 }
 
@@ -83,7 +87,7 @@
 
 	.intro-picto{
 		background: url(../img/svg/team.svg) rgba(255, 255, 255, 0.1) no-repeat center center; 
-		background-size:50% 50%;
+		background-size:50%;
 	}
 }
 
@@ -92,7 +96,7 @@
 
 	.intro-picto{
 		background: url(../img/svg/agility.svg) rgba(255, 255, 255, 0.1) no-repeat center center; 
-		background-size:65% 65%;
+		background-size:65%;
 	}
 }
 		
@@ -325,6 +329,12 @@
 		}
 
 		&#EXTIA-animation{
+			height: rem-calc(400);
+
+			@media #{$medium-up}{
+				height: rem-calc(500);
+			}
+
 			@media #{$xlarge-up}{
 				transform:scale(1.2) translateX(-3rem);
 			}
@@ -440,7 +450,7 @@
     width: 60px;
     height: 60px;
     background: #384047;
-    left: -30px;
+    right: -30px;
     bottom: -30px;
     z-index: 45;
     text-align: center;
